# SandoitchiBridge

./: Cargo.toml  build.bat  firewall.bat  readme.md
service/: Cargo.toml
service/src/: lib.rs  tracking.rs  utils.rs  vts.rs
service/src/tracking/: client.rs  ifacialmocap.rs  response.rs  vtubestudio.rs
service/src/vts/: plugin.rs  requests.rs  responses.rs
src/: main.rs
ui/: Cargo.toml  embed_resources.rc  sandoitchi_bridge_ui.exe.manifest
ui/src/: main.rs
