[package]
name = "sandoitchi_bridge"
version = "0.2.1"
edition = "2021"

[workspace]
members = ["ui", "service"]

[dependencies]
sandoitchi_bridge_service = { path = "./service" }
clap = { version = "4.5.16", features = ["derive"] }
evalexpr = { version = "11.3.0", features = ["rand"] }
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tungstenite = "0.24.0"
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
