[package]
name = "sandoitchi_bridge_service"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
clap = { version = "4.5.16", features = ["derive"] }
evalexpr = "11.3.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tungstenite = "0.24.0"
local-ip-address = "0.6.5"
